<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_xxxhdpi"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appNameText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/app_name"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/quesNumText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/quesText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="#00EEF1F6"
        android:orientation="horizontal">

        <Button
            android:id="@+id/trueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#3CBA54"
            android:shadowColor="#FFFFFF"
            android:text="@string/ans_true" />

        <Button
            android:id="@+id/falseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#DB3236"
            android:text="@string/ans_false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="#00EEF1F6"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/prevQues"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#F4C20D"
            android:padding="2dp"
            android:text="@string/prev_ques"
            android:textSize="11sp" />

        <Button

            android:id="@+id/resetQuizButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#000000"
            android:padding="2dp"
            android:text="@string/reset_quiz"
            android:textColor="#FFFFFF"
            android:textSize="11sp" />

        <Button
            android:id="@+id/resetQuestionButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#000000"
            android:padding="2dp"
            android:text="@string/reset_question"
            android:textColor="#FFFFFF"
            android:textSize="11sp" />

        <Button
            android:id="@+id/nextQues"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#F4C20D"
            android:padding="2dp"
            android:text="@string/next_ques"
            android:textSize="11sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="#00EEF1F6"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:foregroundGravity="center_vertical|center_horizontal"
            android:progress="0"
            android:progressDrawable="@drawable/circle" />

        <TextView
            android:id="@+id/rightAnsNumText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical" />

        <TextView
            android:id="@+id/wrongAnsNumText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical" />
    </LinearLayout>

</LinearLayout>

